search results updated

--- a/results.html
+++ b/results.html
@@ -6,6 +6,7 @@
    <link rel="stylesheet" type="text/css" href="reset.css">
    <link href="google.sprite.css" type="text/css" rel="stylesheet">
    <link href="style2.css" type="text/css" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
     <ul>
@@ -53,65 +54,72 @@
                 <div class=links>
                         <h3><a href="https://www.websitebuilderexpert.com/building-websites/">How to Build a Website: the Step-by-Step Guide to Easy Setup (Jan 19)</a>
                             </h3>
-                        <cite>https://www.websitebuilderexpert.com/building-websites/</cite>
+                        <cite>https://www.websitebuilderexpert.com/building-websites/<i class="fa fa-caret-down"></i></cite>
                 </div>
                 <p><span class=date>Nov 8, 2018</span> - We'll be going through the website building process for both approaches here. You'll be surprised by how simple it can be, especially when ...
                     </p>
             </li>
-            <li class=report></li>
+            <li class=report>
                 <div class=links>
                         <h3><a href="https://support.squarespace.com/hc/en-us/articles/206543687-Building-a-page
                             ">Building a page – Squarespace Help</a>
                             </h3>
-                        <cite>https://support.squarespace.com/hc/en-us/articles/206543687-Building-a-page
+                        <cite>https://support.squarespace.com/hc/en-us/articles/206543687-Building-a-page<i class="fa fa-caret-down"></i>
                             </cite>
                 </div>
                 <p><span class=date>Dec 14, 2017</span> - Regular Pages are versatile and can be used for nearly any purpose. When you build a Regular Page, you'll begin with a starter layout or..
                     </p>
             </li>
-            <li class=report></li>
+            <li class=report>
                 <div class=links>
-                        <h3><a href="###">#####</a>
+                        <h3><a href="https://websitesetup.org/
+                            ">How to Create a Website: Step-by-Step Guide for Beginners (2019)</a>
                             </h3>
-                        <cite>#####</cite>
+                        <cite>https://websitesetup.org/
+                            <i class="fa fa-caret-down"></i></cite>
                 </div>
-                <p><span class=date>#####</span>#####
+                <p><span class=date>Janu 10, 2019</span> - Learn how to make a website and set it up. This site contains different tutorials on how to build a website using WordPress, Joomla, Drupal ...
                     </p>
             </li>
-            <li class=report></li>
+            <li class=report>
                 <div class=links>
-                        <h3><a href="###">#####</a>
+                        <h3><a href="https://unbounce.com/how-to-create-a-landing-page/
+                            ">How to Create a Landing Page Using Unbounce</a>
                             </h3>
-                        <cite>#####</cite>
+                        <cite>https://unbounce.com/how-to-create-a-landing-page/
+                            <i class="fa fa-caret-down"></i></cite>
                 </div>
-                <p><span class=date>#####</span>#####
+                <p><span class=date></span>Learn how you can build a landing page quicker than a developer — no coding skills required.
                     </p>
             </li>
-            <li class=report></li>
+            <li class=report>
                 <div class=links>
-                        <h3><a href="###">#####</a>
+                        <h3><a href="https://www.pcmag.com/article2/0,2817,2404298,00.asp">How to Create a Website | PCMag.com</a>
                             </h3>
-                        <cite>#####</cite>
+                        <cite>https://www.pcmag.com/article2/0,2817,2404298,00.asp<i class="fa fa-caret-down"></i></cite>
                 </div>
-                <p><span class=date>#####</span>#####
+                <p><span class=date>Nov 9, 2018</span> - You can use an online service to create web pages, or build it offline using a desktop software tool. Or, if you're a coding dynamo, use a plain ...
                     </p>
             </li>
-            <li class=report></li>
+            <li class=report>
                 <div class=links>
-                        <h3><a href="###">#####</a>
+                        <h3><a href="https://www.socialmediaexaminer.com/how-to-build-a-facebook-page-for-business-a-guide-for-beginners/">How to Build a Facebook Page for Business: A Guide for Beginners ...</a>
                             </h3>
-                        <cite>#####</cite>
+                        <cite>https://www.socialmediaexaminer.com/how-to-build-a-facebook-page-for-business-a-guide-for-beginners/
+                            <i class="fa fa-caret-down"></i></cite>
                 </div>
-                <p><span class=date>#####</span>#####
+                <p><span class=date>Jun 4, 2017</span> - Would you like to start a Facebook page for your business but aren't sure where to begin? Are you curious about how to manage a page ...
                     </p>
             </li>
-            <li class=report></li>
+            <li class=report>
                 <div class=links>
-                        <h3><a href="###">#####</a>
+                        <h3><a href="https://en.support.wordpress.com/five-step-website-setup/
+                            ">Build Your Website in Five Steps — Support — WordPress.com</a>
                             </h3>
-                        <cite>#####</cite>
+                        <cite>https://en.support.wordpress.com/five-step-website-setup/
+                            <i class="fa fa-caret-down"></i></cite>
                 </div>
-                <p><span class=date>#####</span>#####
+                <p><span class=date></span>Whether you're building a small business website or a personal portfolio, these five steps will get the framework of your new website all set up, leaving it ready ...
                     </p>
             </li>
         </ul>
