added links to home.html

--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
              <img src="googlelogo_color_272x92dp.png" id=logo> 
          </li>
         <li class=left>
-            <input class=form type="text">
+            <input class=form type="text" placeholder="build this page">
             <img src="googlemic_color_24dp.png" id=mic>
             <a id=glass class="form text google glass" href="####"></a>
         </li>
@@ -123,6 +123,17 @@
                     </p>
             </li>
         </ul>
+        <h4>Searches related to build this page</h4>
+        <ul id=related>
+            <li class=related><a href="####">website</a></li>
+            <li class=related><a href="####">how to create a website for your business</a></li>
+            <li class=related>how to create a website free of cost</li>
+            <li class=related>square space</li>
+            <li class=related>wix</li>
+            <li class=related>create website google</li>
+            <li class=related>best website builder</li>
+        </ul>
     </div>
+    
 </body>
 </html>
