--- a/home.html
+++ b/home.html
@@ -49,17 +49,17 @@
         </div>
         <div class=footer>
                 <div class="left">
-                        <a href="#####">Advertising
+                        <a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising
                         </a>
-                        <a href="#####">Business
+                        <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business
                         </a>
                     </div>
                     <div class="right rb">
-                        <a href="#####">Privacy
+                        <a href="https://www.google.com/intl/en_us/policies/privacy/?fg=1">Privacy
                         </a>
-                        <a href="#####">Terms
+                        <a href="https://www.google.com/intl/en_us/policies/terms/?fg=1">Terms
                         </a>
-                        <a href="#####"> Settings
+                        <a href="https://www.google.com/preferences?hl=en"> Settings
                         </a>
                     </div>
         </div>
