ready for final navbar tweaks

--- a/results.html
+++ b/results.html
@@ -29,21 +29,21 @@
      </ul>
         <div class=hormen>
             <ul class=list2>
-                <li><a class="button2" href="######">All</a>
+                <li id=list2><a class="button2" href="######">All</a>
                     </li>
-                <li><a class="button2" href="######">Images</a>
+                <li id=list2><a class="button2" href="######">Images</a>
                     </li>
-                <li><a class="button2" href="######">Shopping</a>
+                <li id=list2><a class="button2" href="######">Shopping</a>
                     </li>
-                <li><a class="button2" href="######">News</a>
+                <li id=list2><a class="button2" href="######">News</a>
                     </li>
-                <li><a class="button2" href="######">Videos</a>
+                <li id=list2><a class="button2" href="######">Videos</a>
                     </li>
-                <li><a class="button2" href="######">More</a>
+                <li id=list2><a class="button2" href="######">More</a>
                     </li>
-                <li><a id=specialspace class="button2" href="######">Settings</a>
+                <li id=list2><a id=specialspace class="button2" href="######">Settings</a>
                     </li>
-                <li><a class="button2" href="######">Tools</a>
+                <li id=list2><a class="button2" href="######">Tools</a>
                     </li>
             </ul>
             </div>
@@ -125,13 +125,13 @@
         </ul>
         <h4>Searches related to build this page</h4>
         <ul id=related>
-            <li class=related><a href="####">website</a></li>
-            <li class=related><a href="####">how to create a website for your business</a></li>
-            <li class=related>how to create a website free of cost</li>
-            <li class=related>square space</li>
-            <li class=related>wix</li>
-            <li class=related>create website google</li>
-            <li class=related>best website builder</li>
+            <li class=related><a href="https://www.google.com/search?q=website&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoAHoECAQQAQ">website</a></li>
+            <li class=related><a href="https://www.google.com/search?q=creating+a+website+for+your+business&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoAXoECAQQAg">how to create a website for your business</a></li>
+            <li class=related><a href="https://www.google.com/search?q=how+to+create+a+website+free+of+cost&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoAnoECAQQAw">how to create a website free of cost</a></li>
+            <li class=related><a href="https://www.google.com/search?q=squarespace&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoA3oECAQQBA">square space</a></li>
+            <li class=related><a href="https://www.google.com/search?q=wix&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoBHoECAQQBQ">wix</a></li>
+            <li class=related><a href="https://www.google.com/search?q=create+website+google&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoBXoECAQQBg">create website google</a></li>
+            <li class=related><a href="https://www.google.com/search?q=best+website+builder&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoB3oECAQQCA">best website builder</a></li>
         </ul>
     </div>
     
