--- a/results.html
+++ b/results.html
@@ -5,6 +5,7 @@
    <meta charset=UTF-8 content="search results">
    <link rel="stylesheet" type="text/css" href="reset.css">
    <link href="google.sprite.css" type="text/css" rel="stylesheet">
+   <link href="gooooogle.sprite.css" type="text/css" rel="stylesheet">
    <link href="style2.css" type="text/css" rel="stylesheet">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
@@ -123,6 +124,9 @@
                     </p>
             </li>
         </ul>
+        <br>
+        <br>
+        <br>
         <h4>Searches related to build this page</h4>
         <ul id=related>
             <li class=related><a href="https://www.google.com/search?q=website&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoAHoECAQQAQ">website</a></li>
@@ -133,6 +137,42 @@
             <li class=related><a href="https://www.google.com/search?q=create+website+google&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoBXoECAQQBg">create website google</a></li>
             <li class=related><a href="https://www.google.com/search?q=best+website+builder&sa=X&ved=2ahUKEwjrm_7wxf3fAhUqw1QKHZmLCN4Q1QIoB3oECAQQCA">best website builder</a></li>
         </ul>
+    </div>
+    <div class="pages">
+        <table class="ooo">
+            <td id=G class="td gooooogle googlelogo_color_272x92dp">
+            </td>
+            <td class="td gooooogle googlelogoredo">
+                <span class="ooospan">1
+                </span>
+            </td>
+            <td class="td gooooogle googlelogoorangeo">
+                    <span class="ooospan">2
+                    </span>
+                </td>
+                <td class="td gooooogle googlelogoorangeo">
+                        <span class="ooospan">3
+                        </span>
+                </td>
+                <td class="td gooooogle googlelogoorangeo">
+                        <span class="ooospan">4</span>
+                </td>
+                <td class="td gooooogle googlelogoorangeo">
+                        <span class="ooospan">5</span>
+                </td>
+                <td class="td gooooogle googlelogoorangeo">
+                        <span class="ooospan">6</span>
+                </td>
+                <td class="td gooooogle googlelogoorangeo">
+                        <span class="ooospan">7</span>
+                </td>
+                <td class="td gooooogle googlelogoorangeo">
+                        <span class="ooospan">8</span>
+                </td>
+                <td id=pagesend class="td gooooogle gle">
+                        <span class="ooospan">Next</span>
+                </td>
+        </table>
     </div>
     
 </body>
