navbars functional for this size page

--- a/results.html
+++ b/results.html
@@ -142,11 +142,11 @@
         <table class="ooo">
             <td id=G class="td gooooogle googlelogo_color_272x92dp">
             </td>
-            <td class="td gooooogle googlelogoredo">
-                <span class="ooospan">1
+            <td id="first" class="td gooooogle googlelogoredo">
+                <span id="first"class="ooospan">1
                 </span>
             </td>
-            <td class="td gooooogle googlelogoorangeo">
+                <td class="td gooooogle googlelogoorangeo">
                     <span class="ooospan">2
                     </span>
                 </td>
@@ -173,6 +173,16 @@
                         <span class="ooospan">Next</span>
                 </td>
         </table>
+    </div>
+    <div class=footer>
+        <span>
+            <span class=footertext>
+                    <a href="https://support.google.com/websearch/?p=ws_results_help&amp;hl=en&amp;fg=1">Help</a>
+                    <a href="####">Send Feedback</a>
+                    <a href="####">Privacy</a>
+                    <a href="####">Terms</a>
+            </span>
+        </span>
     </div>
     
 </body>
